# OOP_Laboratory_Game

./: CMakeLists.txt  keysModel.txt  level0.txt  level1.txt  log.txt  main.cpp  readme.md  save.txt  saveGame.txt
Constants/: Constants.h
Entities/: Entity.cpp  Entity.h  EntityType.h
Entities/Buildings/: Building.cpp  Building.h  EnemyDefenceTower.cpp  EnemyDefenceTower.h  EnemySpawnerBuilding.cpp  EnemySpawnerBuilding.h
Entities/Creatures/: CompControlledCreature.cpp  CompControlledCreature.h  Creature.cpp  Creature.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  PlayerView.cpp  PlayerView.h
Entities/Creatures/Attacks/: Attack.cpp  Attack.h  AttackType.h  CloseRangeAttack.cpp  CloseRangeAttack.h  LongRangeAttack.cpp  LongRangeAttack.h
Entities/buildings/: Building.cpp  Building.h  EnemyBuilding.cpp  EnemyBuilding.h
Exceptions/: CanNotSpawnEntityException.h  CellImpassableException.h  ChooseEnemyPriorityException.h  CoordinateException.h  SpawnEntityException.h  UnexpectedBehaviorException.h  UniversalStringException.h
Exceptions/Notifications/: CantAttackOnCoordsNotification.h  CantCastSpellOnCellNotification.h  CellImpassableNotification.h  NoEntityInCellNotification.h  SlowingCellNotification.h
Factories/: AllySpawner.cpp  AllySpawner.h  EnemyDefenceTowerSpawner.cpp  EnemyDefenceTowerSpawner.h  EnemySpawner.cpp  EnemySpawner.h  EnemySpawnerBuildingSpawner.cpp  EnemySpawnerBuildingSpawner.h  SpellFactory.cpp  SpellFactory.h
GameField/: Cell.cpp  Cell.h  CellType.h  Field.cpp  Field.h
GameField/CellEvents/: CellEvent.cpp  CellEvent.h  CellEventType.h  SlowingCellEvent.cpp  SlowingCellEvent.h  TrapCellEvent.cpp  TrapCellEvent.h
GameManagers/: GameMaster.cpp  GameMaster.h  GameSetup.h
GameManagers/EntityManagers/: EntityManager.h
GameManagers/EntityManagers/BuildingManagers/: EnemySpawnerBuildingManager.cpp  EnemySpawnerBuildingManager.h
GameManagers/EntityManagers/CreatureManagers/: CreatureManager.cpp  CreatureManager.h  EnemyManager.cpp  (+3 more)
GameManagment/: GameMaster.cpp  GameMaster.h  GameMaster.tpp  GameMasterBase.h  GameSetup.cpp
GameManagment/Controllers/: AllyController.cpp  AllyController.h  CompControlledCreatureController.cpp  CompControlledCreatureController.h  EnemyController.cpp  EnemyController.h  EnemyDefenceTowerController.cpp  EnemyDefenceTowerController.h  EnemySpawnerBuildingController.cpp  EnemySpawnerBuildingController.h  PlayerController.cpp  PlayerController.h
GameManagment/EntityManagers/: EntityManager.h
GameRender/: ConsoleRenderer.cpp  ConsoleRenderer.h  GameVisualizer.h  Renderer.cpp  Renderer.h
GameSetup/: GameFieldGenerator.cpp  GameFieldGenerator.h  GameSetup.cpp  GameSetup.h  JsonParser.cpp  JsonParser.h
GameSetup/Utils/: JsonParser.cpp  JsonParser.h  ReadRightJson.cpp  ReadRightJson.h  ReadWrightJson.cpp  ReadWrightJson.h
Logger/: Logger.cpp  Logger.h
Model/: CompControlledCreatureModel.h  EnemyDefenceTowerModel.h  EnemyModel.h  EnemySpawnerBuildingModel.h  GameFieldModel.h  InputKeysModel.cpp  InputKeysModel.h  PlayerModel.h  SpellsModels.h  readme.md
(+46 files in other folders)
